@@ -64,8 +64,8 @@ the standard Microsoft Cabinet file format. This is documented in the
 Microsoft document <tt>CABFMT.DOC</tt> in the Microsoft Cabinet SDK
 (<tt>CAB-SDK.EXE</tt>), which is not freely distributable. The format can
 be gleaned from open source tools and libraries such as <a
-href="http://www.kyz.uklinux.net/cabextract.php">cabextract</a> and <a
-href="http://www.kyz.uklinux.net/libmspack/">libmspack</a>. Windows CE
+href="http://www.cabextract.org.uk/">cabextract</a> and <a
+href="http://www.cabextract.org.uk/libmspack/">libmspack</a>. Windows CE
 installation cabinets typically use no compression (the NONE compression
 method in the cabinet specification).
 </p>
